<resources>
    <string name="app_name">TCC Logística</string>
    <string name="logo_empresa">Logo Empresa</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="entregas">Entregas</string>
    <string name="estoque">Estoque</string>
    <string name="notas">Notas</string>
    <string name="clientes">Clientes</string>
    <string name="motoristas">Motoristas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="celular">Celular</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="veiculo">Veículo</string>
    <string name="categoria">Categoria</string>
    <string name="salvar">Salvar</string>
    <string name="limpar">Limpar</string>
    <string name="placa">Placa</string>
    <string name="ano">Ano</string>
    <string name="motorista_maiusculo">MOTORISTA</string>
    <string name="motorista">Motorista</string>
    <string name="quantidade">QUANTIDADE</string>
    <string name="descricao">Descrição</string>
    <string name="codigo">Código</string>
    <string name="data_chegada">Data Chegada</string>
    <string name="data_entrega">Data Entrega</string>
    <string name="produto">Produto</string>
    <string name="cliente">Cliente</string>
    <string name="observacoes">Observações</string>
    <string name="nova">Nova</string>
    <string name="todas">Todas</string>
    <string name="novo">Novo</string>
    <string name="todos">Todos</string>
    <string name="complemento">Complemento</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="title_activity_roteirista_main">RoteiristaMainActivity</string>
    <string name="title_activity_motorista_main">MotoristaMainActivity</string>
    <string name="sair">Sair</string>
    <string name="suporte">Suporte</string>
    <string name="funcionarios">Funcionários</string>
    <string name="saida">Saída</string>
    <string name="chegada">Chegada</string>
    <string name="endereco">Endereço</string>
    <string name="nota_fiscal">Nota Fiscal</string>
    <string name="status">Status</string>
    <string name="cnh">CNH</string>
    <string name="cargo">Cargo</string>
    <string name="coletas">Coletas</string>
    <string name="rg">RG</string>
    <string name="cpf">CPF</string>
    <string name="emissao">Emissão</string>
    <string name="coletar">Coletar</string>
    <string name="referencia">Referência</string>
    <string name="bairro">Bairro</string>
    <string name="contato">Contato</string>
    <string name="telefone">Telefone</string>
    <string name="especie">Espécie</string>
    <string name="n_pedido">N° Pedido</string>
    <string name="peso">Peso</string>
    <string name="dimensoes">Dimensões</string>
    <string name="n_onu">N° ONU</string>
    <string name="destino">Destino</string>
    <string name="site">Site</string>
    <string name="semi_reboque">Semi-reboque</string>
    <string name="coleta_efetuada_em">Coleta efetuada em</string>
    <string name="hora">Hora</string>
    <string name="horario">Horário</string>
    <string name="coletado_em">Coletado em</string>

    <string-array name="cargos_array">
        <item>Motorista</item>
        <item>Roteirista</item>
        <item>ADM</item>
    </string-array>

    <string-array name="cargos_array_search">
        <item>Todos</item>
        <item>Motorista</item>
        <item>Roteirista</item>
        <item>ADM</item>
    </string-array>

    <string-array name="status_array">
        <item>Todas</item>
        <item>PENDENTE</item>
        <item>REALIZADA</item>
        <item>NÃO REALIZADA</item>
    </string-array>

    <string-array name="status_array2">
        <item>Todas</item>
        <item>REALIZADA</item>
        <item>NÃO REALIZADA</item>
    </string-array>

    <string-array name="status_veiculos_array">
        <item>Todos</item>
        <item>Alocados</item>
        <item>Não Alocados</item>
    </string-array>

    <string name="welcome_user">Olá</string>
    <string name="nota">Nota</string>
    <string name="hora_entrega">Hora Entrega</string>
    <string name="entrega">Entrega</string>
    <string name="fechar">Fechar</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="ultimo_login">Último login</string>
    <string name="ordem_de_coleta">ORDEM DE COLETA</string>
    <string name="destinatario">Destinatário</string>
    <string name="remetente">Remetente</string>
    <string name="dia">Dia</string>
    <string name="uf">UF</string>
    <string name="municipio">Municipio</string>
    <string name="cnpj">CNPJ</string>
    <string name="codigo_antt">Codigo ANTT</string>
    <string name="frete_por_conta">Frete por Conta</string>
    <string name="transportador">Transportador</string>
    <string name="cep">CEP</string>
    <string name="data_de_emissao">Data de Emissão</string>
    <string name="data_do_recebimento">Data do Recebimento</string>
    <string name="natureza_da_operacao">Natureza da Operação</string>
    <string name="marca">Marca</string>
    <string name="peso_bruto">Peso bruto</string>
    <string name="peso_liquido">Peso Líquido</string>
    <string name="dados_adicionais">Dados adicionais</string>
    <string name="inscricao_estadual">Inscrição Estadual</string>
    <string name="valor_total_da_nota">VALOR TOTAL DA NOTA</string>
    <string name="valor_total_dos_produtos">VALOR TOTAL DOS PRODUTOS</string>
    <string name="valor_do_frete">VALOR DO FRETE</string>
    <string name="placa_do_veiculo">PLACA DO VEÍCULO</string>
    <string name="numero">NÚMERO</string>
    <string name="v_total">V. TOTAL</string>
    <string name="p_unitario">P. UNITÁRIO</string>
    <string name="codigo_produto">CÓDIGO PRODUTO</string>
    <string name="instrucoes">Instruções</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="traco">-</string>
    <string name="nova_senha">Nova senha</string>
    <string name="senha_atual">Senha atual</string>
    <string name="repita_a_nova_senha">Repita a nova senha</string>
    <string name="confirmar">Confirmar</string>
    <string name="alterar_senha">Alterar senha</string>
    <string name="excluir">Excluir</string>
    <string name="login">Login</string>
    <string name="estamos_em_manutencao">Estamos em manutenção!</string>
    <string name="enviar_feedback">Enviar feedback</string>
    <string name="contate_nos">Contate-nos</string>
    <string name="meus_dados">Meus dados</string>
    <string name="ajuda_e_feedback">Ajuda e feedback</string>
    <string name="ajuda">Ajuda</string>
    <string name="pedentes">Pedentes</string>
    <string name="realizadas">Realizadas</string>
    <string name="finalizar">Finalizar</string>
    <string name="galeria">Galeria</string>
    <string name="camera">Câmera</string>
    <string name="abrir">Abrir</string>
    <string name="veiculos">Veículos</string>
    <string name="modelo">Modelo</string>
    <string name="cor">Cor</string>
    <string name="data_de_validade">Data de validade</string>
    <string name="validade">Validade</string>
    <string name="local">Local</string>
    <string name="primeira_habilitacao">1° Habilitação</string>
    <string name="n_registro">N° Registro</string>
    <string name="finalizadas">Finalizadas</string>
    <string name="alocar">Alocar</string>
</resources>
