<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_entregas"
            android:icon="@drawable/ic_place_24dp"
            android:title="@string/entregas" />

        <item
            android:id="@+id/nav_notas"
            android:icon="@drawable/ic_shopping_cart_24dp"
            android:title="@string/notas" />

        <item
            android:id="@+id/nav_coletas"
            android:icon="@drawable/ic_near_me_24dp"
            android:title="@string/coletas" />

        <item
            android:id="@+id/nav_veiculos"
            android:icon="@drawable/ic_people_24dp"
            android:title="@string/veiculos" />

        <item
            android:id="@+id/nav_funcionarios"
            android:icon="@drawable/ic_people_24dp"
            android:title="@string/funcionarios" />
    </group>

    <group
        android:id="@+id/menu2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_meus_dados"
            android:icon="@drawable/ic_account_box_24dp"
            android:title="@string/meus_dados" />
    </group>

    <group
        android:id="@+id/menu3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_suporte"
            android:icon="@drawable/ic_help_24dp"
            android:title="@string/ajuda_e_feedback" />
    </group>

</menu>
