<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notas">

    <fragment
        android:id="@+id/nav_notas"
        android:name="com.gutotech.tcclogistica.view.roteirista.ui.notas.RoteiristaEstoqueFragment"
        android:label="@string/notas"
        tools:layout="@layout/fragment_roteirista_estoque" />

    <fragment
        android:id="@+id/nav_entregas"
        android:name="com.gutotech.tcclogistica.view.roteirista.ui.entregas.RoteiristaEntregasFragment"
        android:label="@string/entregas"
        tools:layout="@layout/fragment_roteirista_entregas" />

    <fragment
        android:id="@+id/nav_coletas"
        android:name="com.gutotech.tcclogistica.view.roteirista.ui.coleta.RoteiristaColetasFragment"
        android:label="@string/coletas"
        tools:layout="@layout/fragment_roteirista_coletas" />

    <fragment
        android:id="@+id/nav_meus_dados"
        android:name="com.gutotech.tcclogistica.view.PerfilFragment"
        android:label="@string/meus_dados"
        tools:layout="@layout/fragment_perfil" />

    <fragment
        android:id="@+id/nav_suporte"
        android:name="com.gutotech.tcclogistica.view.SupportFragment"
        android:label="@string/ajuda"
        tools:layout="@layout/fragment_suporte" />
</navigation>