<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/motoristaTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/motorista"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/celularTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/celular"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/cnhTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/cnh"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/veiculoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/veiculo"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/categoriaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/categoria"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>